--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.12.2",
     "@astrojs/netlify": "^1.2.1",
     "@astrojs/preact": "^1.2.0",
     "@astrojs/tailwind": "^2.1.0",
