--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.12.1",
     "@astrojs/mdx": "^0.12.2",
     "@astrojs/netlify": "^1.2.1",
     "@astrojs/preact": "^1.2.0",
@@ -22,6 +23,7 @@
     "daisyui": "^2.31.0",
     "postcss": "^8.4.18",
     "preact": "^10.7.3",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.0.24",
     "vite": "^3.1.8"
   }
