바다의 재 번역 99% 완료

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "deno.lint": true,
   "deno.fmt": true,
   "deno.enablePaths": ["./src/deno_script"],
-  "eslint.runtime": "node"
+  "eslint.runtime": "node",
+  "deno.enable": true
 }
